tests/type_check/rvalue_typing/rvalue_enum_constr_wrong_payload_type.err.expected
error: at 6:13: [TC-EnumConstrPayloadTypeMismatch] In function 'f', block 'entry': Variant 'Some' of enum 'Option' expects type i64, found bool
   |
 6 |             o = Option::Some(true);
   |             ^^^^^^^^^^^^^^^^^^^^^^
